manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-1-service
spec:
  selector:
    app: otus-1-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
