manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
    # kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/dafurmanov(/|$)(.*)
        pathType: Prefix
        backend:
            service: 
              name: otus-1-service
              port: 
                number: 80
      - path: /health
        pathType: Prefix
        backend:
            service: 
              name: otus-1-service
              port: 
                number: 80
